# vrlt

./: .gitignore  BSD-LICENSE.txt  CMakeLists.txt  LGPL-LICENSE.txt  README.md
BundleAdjustment/: CMakeLists.txt
BundleAdjustment/BundleAdjustment/: bundle.h  outliers.h  updatepose.h
BundleAdjustment/src/: bundle.cpp  outliers.cpp  updatepose.cpp
Estimator/: CMakeLists.txt
Estimator/Estimator/: estimator.h
Estimator/src/: closed_form_polynomial_solver.cc  estimator.cpp  five_point_relative_pose.cc  five_point_relative_pose.h  perspective_three_point.cc  perspective_three_point.h  polynomial.cc  polynomial.h  util.cc  util.h
FeatureExtraction/: CMakeLists.txt
FeatureExtraction/FeatureExtraction/: features.h
FeatureExtraction/src/: features.cpp
FeatureMatcher/: CMakeLists.txt
FeatureMatcher/FeatureMatcher/: approxnn.h  bruteforce.h  featurematcher.h  nn.h
FeatureMatcher/src/: approxnn.cpp  bruteforce.cpp  featurematcher.cpp
GLUtils/: CMakeLists.txt
GLUtils/GLUtils/: CheckGL.h  GLContext.h  GLDrawable.h  GLGenericDrawable.h  GLModel.h  GLSL.h  GLSLHelpers.h  GLSLPrograms.h  GLShadow.h  LoadImage.h  LoadOBJ.h  TexturePacker.h
GLUtils/src/: CheckGL.cpp  GLContext.cpp  GLDrawable.cpp  GLGenericDrawable.cpp  GLModel.cpp  GLSL.cpp  GLSLHelpers.cpp  GLSLPrograms.cpp  GLShadow.cpp  LoadImage.cpp  LoadOBJ.cpp  TexturePacker.cpp
ImageCache/: CMakeLists.txt
ImageCache/ImageCache/: imagecache.h
ImageCache/src/: imagecache.cpp
Localizer/: CMakeLists.txt
Localizer/Localizer/: localizer.h  nnlocalizer.h
Localizer/src/: localizer.cpp  nnlocalizer.cpp
LocalizerClient/: CMakeLists.txt
LocalizerClient/LocalizerClient/: client.h
LocalizerClient/src/: client.cpp
LocalizerClientAndroid/: .cproject  .project  AndroidManifest.xml  project.properties
LocalizerClientAndroid/jni/: Android.mk  Application.mk  LocalizationClient.cpp  LocalizationClient.h
LocalizerClientAndroid/res/layout/: localizer_activity_layout.xml
LocalizerClientAndroid/res/values/: strings.xml
LocalizerClientAndroid/src/org/opencv/samples/facedetect/: LocalizerActivity.java  NativeCommunicationWraper.java
LocalizerServer/: CMakeLists.txt  Server.cpp
MultiView/: CMakeLists.txt
MultiView/MultiView/: multiview.h  multiview_io_xml.h  pyramid.h
MultiView/src/: ReadReconstruction.cpp  multiview.cpp  multiview_io_xml.cpp  pyramid.cpp
PatchTracker/: CMakeLists.txt
PatchTracker/PatchTracker/: ncc.h  nccsearch.h  patch.h  robustlsq.h  sampler.h  search.h  ssd.h  timer.h  tracker.h
PatchTracker/src/: ncc.cpp  nccsearch.cpp  patch.cpp  robustlsq.cpp  sampler.cpp  ssd.cpp  tracker.cpp
SfMPipeline/: AddImages.cpp  AlignOSM.cpp  Bootstrap.cpp  CMakeLists.txt  EstimateGround.cpp  EstimateNormals.cpp  EstimateVertical.cpp  ExportPoses.cpp  ExtractImagesCatadioptric.cpp  ExtractImagesSpherical.cpp  ExtractORB.cpp  ExtractSIFT.cpp  InitializeFromFile.cpp  LinearMatch.cpp  MakePLY.cpp  MakeTracks.cpp  Organize.cpp  PairwiseMatch.cpp  RefineAlignOSM.cpp  ShowMatches.cpp  extract_images.cpp  extract_images.h  lines.cpp  lines.h  match.cpp  match.h  osm_xml_reader.cpp  osm_xml_reader.h  threaded.h
SfMPipeline/ocam/: ocam_functions.cpp  rpoly.cpp  rpoly.h  world2cam.cpp  world2cam.h
SfMPipeline/ocam/.svn/: entries
SfMPipeline/ocam/.svn/text-base/: CMakeLists.txt.svn-base  ocam_functions.h.svn-base  world2cam.cpp.svn-base  world2cam.h.svn-base
Test/: CMakeLists.txt  RenderTrack.cpp  TestClient.cpp  TestLocalizer.cpp  TestTracker.cpp
cmake/Modules/: FindCVD.cmake  FindGeographicLib.cmake  FindSophus.cmake
docs/: Doxyfile
iOSLibs/: README.txt
iOSRecorder/: MainWindow.xib
iOSRecorder/iOSRecorder/: AppDelegate.h  AppDelegate.m  ImageWriter.h  ImageWriter.m  MainViewController.h  MainViewController.m  VideoHandler.h  VideoHandler.m  VideoView.h  VideoView.m  iOSRecorder-Info.plist  iOSRecorder-Prefix.pch  main.m
iOSRecorder/iOSRecorder.xcodeproj/: project.pbxproj
iOSTracker/Resources-iPad/iOSTracker/en.lproj/: MainViewController.xib  MainWindow.xib
iOSTracker/iOSTracker/: ARDisplay.h  ARDisplay.mm  EAGLView.h  EAGLView.m  MainViewController.h  MainViewController.mm  TrackerHandler.h  TrackerHandler.mm  VideoHandler.h  VideoHandler.mm  VideoLoader.h  VideoLoader.mm  VideoView.h  VideoView.m  default_settings.plist  iOSTracker-Info.plist  iOSTracker-Prefix.pch  iOSTrackerAppDelegate.h  iOSTrackerAppDelegate.m  main.m
iOSTracker/iOSTracker.xcodeproj/: project.pbxproj
iOSTracker/iOSTracker/en.lproj/: MainViewController.xib  MainWindow.xib
