
find_library( Geographic Geographic REQUIRED )
add_executable( TestLocalizer TestLocalizer.cpp )
target_compile_features( TestLocalizer PRIVATE cxx_auto_type )
target_link_libraries( TestLocalizer vrlt_multiview )
target_link_libraries( TestLocalizer vrlt_localizer  )
target_link_libraries( TestLocalizer vrlt_features  )
target_link_libraries( TestLocalizer vrlt_featurematcher  )
target_link_libraries( TestLocalizer ${Geographic} )

add_executable( TestTracker TestTracker.cpp )
target_compile_features( TestTracker PRIVATE cxx_auto_type )
target_link_libraries( TestTracker vrlt_multiview  )
target_link_libraries( TestTracker vrlt_patchtracker  )
target_link_libraries( TestTracker vrlt_bundleadjustment  )
target_link_libraries( TestTracker ${Geographic} )
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_link_libraries( TestTracker dispatch)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

find_package(GLUT REQUIRED)
include_directories(${GLUT_INCLUDE_DIRS})
add_executable( RenderTrack RenderTrack.cpp )
target_compile_features( RenderTrack PRIVATE cxx_auto_type )
target_link_libraries( RenderTrack vrlt_multiview  )
target_link_libraries( RenderTrack vrlt_glutils  )
target_link_libraries( RenderTrack ${GLUT_LIBRARY} )

